--- a/style/app.css
+++ b/style/app.css
@@ -23,6 +23,13 @@
     -o-transition: all .3s ease-in-out;
 }
 
+.h2-title {
+    font-size: 5rem;
+}
+.h2-title span{
+ color: orange;
+}
+
 .border-own:hover {
     border: 1px dashed black;
     border-radius: var(--border-radius-hover);
@@ -135,21 +142,46 @@ section.home .row img {
     cursor: pointer;
 }
 
+/* //////////////////////////////////////////////////////////////section About-Us // */
+
+.about-us .row  img {
+    animation:aboutImage 4s linear infinite;
+}
+@keyframes aboutImage {
+    0%, 100%{
+        transform: scale(.9);
+        border-radius: var(--border-radius-hover);
+    }
+    50%{
+        transform: scale(.8);
+        border-radius: var(--border-radius);
+    }
+}
+.w_31 {
+    width: 31%;
+}
+
+
+
 
 
 @media screen and (max-width : 992px) {
     .header-title {
         font-size: 3rem;
     }
+    
 }
-
-
 @media screen and (max-width : 768px) {
     .header-box_img {
         width: 60% !important;
     }
+    .box-Container {
+        flex-direction: column;
+    }
+    .box{
+        width: 80% !important;
+    }
 }
-
 @media screen and (max-width : 576px) {
     .header-box_img {
         width: 80% !important;
